# transaction-sync

./: package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yaml
ci/: install-choco.sh  install-vcpkg.sh  install-windows-chocolatey.sh  install-windows-vcpkg.sh  install.sh  setup-env.sh
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: click.rs  detect.rs  lib.rs  main.rs  window.rs
src/components/: btn.vue  trash.vue
src/pages/: dialog.vue  index.vue  preview.vue
